@@ -57,7 +57,7 @@ STDIO_SRCS	= lib_printf.c lib_rawprintf.c lib_lowprintf.c lib_dbg.c \
 		  lib_lowstream.c lib_nullstream.c lib_sscanf.c
 
 ifneq ($(CONFIG_NFILE_DESCRIPTORS),0)
-STDIO_SRCS	+= lib_rawstream.c
+STDIO_SRCS	+= lib_rawstream.c lib_chdir.c lib_getcwd.c lib_cwdsem.c
 ifneq ($(CONFIG_NFILE_STREAMS),0)
 STDIO_SRCS	+= lib_fopen.c lib_fclose.c lib_fread.c lib_libfread.c lib_fseek.c \
 		   lib_fgetc.c lib_fgets.c lib_gets.c lib_fwrite.c lib_libfwrite.c \
